Fix iOS Safari staff card wrapping, fixes #166

--- a/assets/styles/staff.scss
+++ b/assets/styles/staff.scss
@@ -1,28 +1,26 @@
 @import 'app';
 
 .staff-container {
-  display: -webkit-box;
   display: flex;
   justify-content: space-around;
-  -webkit-justify-content: space-around;
   align-items: flex-start;
   flex-wrap: wrap;
   width: 100%;
 }
 
 .contact-card {
-  flex-basis: 20%;
-  width: 20%;
+  flex-basis: 234px;
+  width: 234px;
   
   min-width: 234px;
   
-  display: inline-block;
+  display: block;
   
   background: white;
   box-shadow: 6px 6px 0 $box-shadow;
   
   padding: 0;
-  margin: 0 5%;
+  margin: 0 1.5rem;
   margin-bottom: 3rem;
   
   position: relative;
@@ -125,6 +123,16 @@
 /*****************/
 /* MEDIA QUERIES */
 /*****************/
+
+@media(min-width: $small-screen-size) {
+  .contact-card {
+    flex-basis: 20%;
+    width: 20%;
+    margin: 0 10%;
+    margin-bottom: 3rem;
+    display: inline-block;
+  }
+}
 
 @media(min-width: $moderate-screen-size) {
   .contact-card {
